--- a/.tmux.conf
+++ b/.tmux.conf
@@ -30,6 +30,10 @@ set -g default-command bash
 set-window-option -g mode-keys emacs
 
 # terminal 256 colors
-set -g default-terminal "screen-256color"
+set -g default-terminal "xterm-256color"
 set -g status-bg colour8
 set -g status-fg white
+
+# btop for checking
+set -g terminal-features ',xterm-256color:RGB'
+
