update terminfo usage

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -29,11 +29,7 @@ set -g default-command bash
 # emacs keys for copy
 set-window-option -g mode-keys emacs
 
-# terminal 256 colors
+# set color terminal
 set -g default-terminal "xterm-256color"
 set -g status-bg colour8
 set -g status-fg white
-
-# btop for checking
-set -g terminal-features ',xterm-256color:RGB'
-
