--- a/.o-conf/raven.conf
+++ b/.o-conf/raven.conf
@@ -26,3 +26,103 @@ Host rofilec
 Host catlec
  Hostname 192.168.77.46
  ProxyJump beatrou
+
+Host beatcloude-cbr
+ Port 3301
+ Hostname 127.0.0.1
+ ProxyJump raven@cbr
+
+Host beatcloude-cgl
+ Port 3301
+ Hostname 127.0.0.1
+ ProxyJump raven@cgl
+
+Host beatcloude-gca
+ Port 3301
+ Hostname 127.0.0.1
+ ProxyJump raven@gca
+
+Host beatcloude-mha
+ Port 3301
+ Hostname 127.0.0.1
+ ProxyJump raven@mha
+
+Host werter-cbr
+ Port 3302
+ Hostname 127.0.0.1
+ ProxyJump raven@cbr
+
+Host werter-cgl
+ Port 3302
+ Hostname 127.0.0.1
+ ProxyJump raven@cgl
+
+Host werter-gca
+ Port 3302
+ Hostname 127.0.0.1
+ ProxyJump raven@gca
+
+Host werter-mha
+ Port 3302
+ Hostname 127.0.0.1
+ ProxyJump raven@mha
+
+Host hearts-cbr
+ Port 3303
+ Hostname 127.0.0.1
+ ProxyJump raven@cbr
+
+Host hearts-cgl
+ Port 3303
+ Hostname 127.0.0.1
+ ProxyJump raven@cgl
+
+Host hearts-gca
+ Port 3303
+ Hostname 127.0.0.1
+ ProxyJump raven@gca
+
+Host hearts-mha
+ Port 3303
+ Hostname 127.0.0.1
+ ProxyJump raven@mha
+
+Host garden-cbr
+ Port 3304
+ Hostname 127.0.0.1
+ ProxyJump raven@cbr
+
+Host garden-cgl
+ Port 3304
+ Hostname 127.0.0.1
+ ProxyJump raven@cgl
+
+Host garden-gca
+ Port 3304
+ Hostname 127.0.0.1
+ ProxyJump raven@gca
+
+Host garden-mha
+ Port 3304
+ Hostname 127.0.0.1
+ ProxyJump raven@mha
+
+Host fiscal-cbr
+ Port 3305
+ Hostname 127.0.0.1
+ ProxyJump raven@cbr
+
+Host fiscal-cgl
+ Port 3305
+ Hostname 127.0.0.1
+ ProxyJump raven@cgl
+
+Host fiscal-gca
+ Port 3305
+ Hostname 127.0.0.1
+ ProxyJump raven@gca
+
+Host fiscal-mha
+ Port 3305
+ Hostname 127.0.0.1
+ ProxyJump raven@mha
